--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -11,7 +11,8 @@ test:
 # set these environment variables on your prod server
 production:
   parameterize_keys: false
-  uri: <%= ENV['MONGOHQ_URL'] %>
+  # uri: <%= ENV['MONGOHQ_URL'] %>
+  uri: <%= ENV['MONGOLAB_URL'] %>
   # slaves:
   #   - host: slave1.local
   #     port: 27018
