--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -12,7 +12,7 @@ test:
 production:
   parameterize_keys: false
   # uri: <%= ENV['MONGOHQ_URL'] %>
-  uri: <%= ENV['MONGOLAB_URL'] %>
+  uri: <%= ENV['MONGOLAB_URI'] %>
   # slaves:
   #   - host: slave1.local
   #     port: 27018
