--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,9 +1,16 @@
+<% mongolab_uri = URI.parse(ENV['MONGOLAB_URI']) %>
+
 production:
   # Configure available database sessions. (required)
   sessions:
     # Defines the default session. (required)
     default:
-      uri: <%= ENV['MONGOLAB_URI'] %>
+      database: <%= mongolab_uri.path.sub('/','') %>
+      username: <%= mongolab_uri.user %>
+      password: <%= mongolab_uri.password %>
+      hosts:
+        - <%= mongolab_uri.host %>:<%= mongolab_uri.port %>
+
       options:
         # Change whether the session persists in safe mode by default.
         # (default: false)
@@ -13,6 +20,7 @@ production:
         # :eventual will send reads to secondaries, :strong sends everything
         # to master. (default: :eventual)
         consistency: :strong
+
   # Configure Mongoid specific options. (optional)
   options:
     # Configuration for whether or not to allow access to fields that do
